Update hero slider background styles for improved visual effects

--- a/index.html
+++ b/index.html
@@ -93,84 +93,84 @@
         <div class="slides">
             <!-- Slide 1: Doctor Intro -->
             <div class="slide active">
-                <div class="slide-bg" style="background-image: url('public/hospital-building.jpg');"></div>
+                <div class="slide-bg" style="background-image: url('images/b1.png');"></div>
                 <div class="container">
                     <div class="hero-content">
-                        <h1>Meet Dr. Bipin Solanki<br>Trauma & Orthopedic Specialist</h1>
-                        <p>Two decades of excellence in fracture management, joint replacement, and sports injuries with AIIMS trauma expertise.</p>
+                        <h1>Dr. Bipin Solanki<br>Orthopedic Specialist</h1>
+                        <p>Two decades of excellence in fracture management, joint replacement, and sports injuries with AIIMS trauma expertise. Expert treatment for complex trauma cases and advanced orthopedic procedures.</p>
                     </div>
                     <div class="hero-image">
-                        <img src="images/doctor-hero.png" alt="Dr. Bipin Solanki">
+                        <img src="images/b1.png" alt="Dr. Bipin Solanki">
                     </div>
                 </div>
             </div>
 
             <!-- Slide 2: Arthroscopic Surgery -->
             <div class="slide">
-                <div class="slide-bg" style="background-image: url('public/operating-room.jpg');"></div>
+                <div class="slide-bg" style="background-image: url('images/b1.png');"></div>
                 <div class="container">
                     <div class="hero-content">
                         <h1>Arthroscopic Surgery</h1>
                         <p>Minimally invasive procedures for joint problems with faster recovery and minimal scarring.</p>
                     </div>
                     <div class="hero-image">
-                        <img src="images/arthroscopic-surgery.png" alt="Arthroscopic Surgery">
+                        <img src="images/b1.png" alt="Dr. Bipin Solanki - Arthroscopic Surgery">
                     </div>
                 </div>
             </div>
 
             <!-- Slide 3: Arthritis Treatment -->
             <div class="slide">
-                <div class="slide-bg" style="background-image: url('public/arthritis-treatment-bg.jpg');"></div>
+                <div class="slide-bg" style="background-image: url('images/b2.png');"></div>
                 <div class="container">
                     <div class="hero-content">
-                        <h1>Arthritis Treatment in Delhi</h1>
+                        <h1>Arthritis Treatment</h1>
                         <p>Comprehensive arthritis care with conservative and surgical treatment options for pain relief.</p>
                     </div>
                     <div class="hero-image">
-                        <img src="images/arthritis-treatment.png" alt="Arthritis Treatment">
+                        <img src="images/b2.png" alt="Dr. Bipin Solanki - Arthritis Treatment">
                     </div>
                 </div>
             </div>
 
             <!-- Slide 4: Hip Replacement -->
             <div class="slide">
-                <div class="slide-bg" style="background-image: url('public/hip-replacement-bg.jpg');"></div>
+                <div class="slide-bg" style="background-image: url('images/b5.png');"></div>
                 <div class="container">
                     <div class="hero-content">
-                        <h1>Hip Replacement Surgery</h1>
+                        <h1>Hip Replacement</h1>
                         <p>Advanced hip replacement techniques for improved mobility and pain-free movement.</p>
                     </div>
                     <div class="hero-image">
-                        <img src="images/hip-replacement.png" alt="Hip Replacement">
+                        <img src="images/b5.png" alt="Dr. Bipin Solanki - Hip Replacement">
                     </div>
                 </div>
             </div>
 
             <!-- Slide 5: Knee Replacement -->
             <div class="slide">
-                <div class="slide-bg" style="background-image: url('public/knee-replacement-bg.jpg');"></div>
+                <div class="slide-bg" style="background-image: url('images/b3.png');"></div>
         <div class="container">
             <div class="hero-content">
-                        <h1>Knee Replacement Surgery</h1>
+                        <h1>Knee Replacement</h1>
                         <p>Expert knee replacement with international training for optimal recovery and mobility.</p>
                     </div>
                     <div class="hero-image">
-                        <img src="images/knee-replacement.png" alt="Knee Replacement">
+                        <img src="images/b3.png" alt="Dr. Bipin Solanki - Knee Replacement">
                     </div>
                 </div>
             </div>
 
             <!-- Slide 6: Spine Treatments -->
             <div class="slide">
-                <div class="slide-bg" style="background-image: url('public/spine-treatment-bg.jpg');"></div>
+                <div class="slide-bg" style="background-image: url('images/b4.png');"></div>
                 <div class="container">
                     <div class="hero-content">
-                        <h1>Spine & Sports Injury Treatment</h1>
+                        <h1>Spine & Sports Injury</h1>
                         <p>Comprehensive spine care and sports injury treatment with AIIMS expertise.</p>
-            </div>
-            <div class="hero-image">
-                        <img src="images/spine-treatment.png" alt="Spine Treatment">
+                    </div>
+                    <div class="hero-image">
+                        <img src="images/b4.png" alt="Dr. Bipin Solanki - Spine Treatment">
                     </div>
                 </div>
             </div>
@@ -184,16 +184,9 @@
             <div class="about-grid">
                 <div class="about-visual">
                     <div class="about-image-frame">
-                        <img src="images/doctor-profile.png" alt="Dr. Bipin Solanki">
+                        <img src="images/docinchair.jpg" alt="Dr. Bipin Solanki">
                     </div>
                     <div class="about-specialty-card">
-                        <p>Your knees and hips are essential for smooth movement. Dr. Bipin Solanki specializes in joint replacements, helping you regain mobility and live pain‑free.</p>
-                        <div class="about-signature">
-                            <strong>Dr. Bipin Solanki</strong>
-                            <span>Sr. Orthopaedic Surgeon</span>
-                        </div>
-                    </div>
-                    <div class="specialty-list">
                         <h4>Our Specialty</h4>
                         <ul>
                             <li>
@@ -221,6 +214,11 @@
                                 <span>Arthritis & Joint Preservation</span>
                             </li>
                         </ul>
+                        <p>Your knees and hips are essential for smooth movement. Dr. Bipin Solanki specializes in joint replacements, helping you regain mobility and live pain‑free.</p>
+                        <div class="about-signature">
+                            <strong>Dr. Bipin Solanki</strong>
+                            <span>Sr. Orthopaedic Surgeon</span>
+                        </div>
                     </div>
                 </div>
                 <div class="about-copy">
