Add about-doctor-card section for Dr. Bipin Solanki to highlight expertise and enhance user engagement

--- a/index.html
+++ b/index.html
@@ -219,6 +219,8 @@
                             </li>
                         </ul>
                         <p>Your knees and hips are essential for smooth movement. Dr. Bipin Solanki specializes in joint replacements, helping you regain mobility and live pain‑free.</p>
+                    </div>
+                    <div class="about-doctor-card">
                         <div class="about-signature">
                             <strong>Dr. Bipin Solanki</strong>
                             <span>Sr. Orthopaedic Surgeon</span>
