Refactor about section layout by repositioning the about-doctor-card and enhancing styles for better responsiveness. Update hero section styles for improved visual hierarchy and user engagement.

--- a/index.html
+++ b/index.html
@@ -189,6 +189,12 @@
                 <div class="about-visual">
                     <div class="about-image-frame">
                         <img src="images/docinchair.jpg" alt="Dr. Bipin Solanki">
+                        <a href="contact.html" class="about-doctor-card">
+                            <div class="about-signature">
+                                <strong>Dr. Bipin Solanki</strong>
+                                <span>Sr. Orthopaedic Surgeon</span>
+                            </div>
+                        </a>
                     </div>
                     <div class="about-specialty-card">
                         <h4>Our Specialty</h4>
@@ -219,12 +225,6 @@
                             </li>
                         </ul>
 
-                    </div>
-                    <div class="about-doctor-card">
-                        <div class="about-signature">
-                            <strong>Dr. Bipin Solanki</strong>
-                            <span>Sr. Orthopaedic Surgeon</span>
-                        </div>
                     </div>
                 </div>
                 <div class="about-copy">
