Update contact and index pages to include new hospital locations with interactive map links, enhancing user accessibility to services. Add Instagram reel embeds for improved social media engagement and update styles for better responsiveness.

--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
     <div class="top-bar">
         <div class="container">
             <div class="contact-info">
+                <span>📍 <a href="https://maps.app.goo.gl/3MmSdmw9So3xGZUG6" target="_blank" rel="noopener" class="map-link">Apollo Spectra Hospitals, Greater Kailash, New Delhi</a></span>
                 <span>📍 <a href="https://maps.app.goo.gl/3MmSdmw9So3xGZUG6" target="_blank" rel="noopener" class="map-link">Yupiter Hospital, Green Park Extension, New Delhi</a></span>
             </div>
             <div class="contact-info center">
