Update footer across multiple pages to wrap the logo in a link for improved navigation. Adjust styles for better responsiveness and enhance mobile layout for footer sections.

--- a/blog-sports-injury.html
+++ b/blog-sports-injury.html
@@ -259,7 +259,9 @@
             <div class="footer-content">
                 <div class="footer-section footer-brand">
                     <div class="footer-logo">
-                        <img src="images/bbc-logo.png" alt="BBC Best Bone Clinic" class="footer-logo-img">
+                        <a href="index.html">
+                            <img src="images/bbc-logo.png" alt="BBC Best Bone Clinic" class="footer-logo-img">
+                        </a>
                     </div>
                     <p class="footer-text">In Orthopaedics International most of our patients wind up feeling like family. You'll always see Dr. Bipin when you come in for your appointment.</p>
                     <div class="footer-social">
