--- a/index.html
+++ b/index.html
@@ -394,19 +394,7 @@
                 <a class="insta-follow" href="https://www.instagram.com/drbipinsolanki" target="_blank" rel="noopener">Follow @drbipinsolanki</a>
             </div>
             <div class="insta-carousel" aria-label="Instagram posts">
-                <button class="insta-arrow prev" aria-label="Previous">❮</button>
                 <div class="insta-viewport">
-                    <!-- Navigation Arrows -->
-                    <button class="insta-nav-arrow prev" aria-label="Previous reel">
-                        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M15 18L9 12L15 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                    </button>
-                    <button class="insta-nav-arrow next" aria-label="Next reel">
-                        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M9 18L15 12L9 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                    </button>
                     
                     <div class="insta-track">
                         <!-- Instagram Reel Embed 1 -->
@@ -446,25 +434,25 @@
                         <!-- Instagram Reel Embed 2 -->
                         <div class="insta-embed-card">
                             <div class="insta-video-container">
-                                <iframe src="https://www.instagram.com/reel/DM-tX_RSTcY/embed/" width="280" height="350" frameborder="0" scrolling="no" allowtransparency="true" class="insta-embed"></iframe>
+                                <iframe src="https://www.instagram.com/reel/DLFxA7av6nB/embed/" width="280" height="350" frameborder="0" scrolling="no" allowtransparency="true" class="insta-embed"></iframe>
                                 <div class="insta-metrics">
                                     <div class="metric-item">
                                         <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
                                             <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
                                         </svg>
-                                        <span>856</span>
+                                        <span>1.8K</span>
                                     </div>
                                     <div class="metric-item">
                                         <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
                                             <path d="M21.99 4c0-1.1-.89-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h14l4 4-.01-18zM18 14H6v-2h12v2zm0-3H6V9h12v2zm0-3H6V6h12v2z"/>
                                         </svg>
-                                        <span>67</span>
+                                        <span>142</span>
                                     </div>
                                     <div class="metric-item">
                                         <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
                                             <path d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31 2.04-.81l7.12 4.16c-.05.21-.08.43-.08.65 0 1.61 1.31 2.92 2.92 2.92s2.92-1.31 2.92-2.92-1.31-2.92-2.92-2.92z"/>
                                         </svg>
-                                        <span>18</span>
+                                        <span>28</span>
                                     </div>
                                 </div>
                             </div>
@@ -533,7 +521,6 @@
                         <div class="insta-swipe-dot" data-slide="3"></div>
                     </div>
                 </div>
-                <button class="insta-arrow next" aria-label="Next">❯</button>
             </div>
         </div>
     </section>
@@ -685,26 +672,13 @@
                 </div>
                 <div class="footer-section">
                     <h4>Our Clinic</h4>
-                    <div class="footer-contact-info">
-                        <i>📍</i>
-                        <span><a href="https://maps.app.goo.gl/3MmSdmw9So3xGZUG6" target="_blank" rel="noopener" class="map-link">Apollo Spectra Hospitals, Greater Kailash, New Delhi</a></span>
-                    </div>
-                    <div class="footer-contact-info">
-                        <i>📍</i>
-                        <span><a href="https://maps.app.goo.gl/3MmSdmw9So3xGZUG6" target="_blank" rel="noopener" class="map-link">Yupiter Hospital, Green Park Extension, New Delhi</a></span>
-                    </div>
-                    <div class="footer-contact-info">
-                        <i>📞</i>
-                        <span><a href="tel:+919717289689">+91 9717289689</a></span>
-                    </div>
-                    <div class="footer-contact-info">
-                        <i>✉️</i>
-                        <span><a href="mailto:bipinsolanki007@gmail.com">bipinsolanki007@gmail.com</a></span>
-                    </div>
-                    <div class="footer-contact-info">
-                        <i>🕒</i>
-                        <span>Everyday 9 AM – 5 PM</span>
-                    </div>
+                    <ul>
+                        <li><i>📍</i> <a href="https://maps.app.goo.gl/3MmSdmw9So3xGZUG6" target="_blank" rel="noopener" class="map-link">Apollo Spectra Hospitals, Greater Kailash, New Delhi</a></li>
+                        <li><i>📍</i> <a href="https://maps.app.goo.gl/3MmSdmw9So3xGZUG6" target="_blank" rel="noopener" class="map-link">Yupiter Hospital, Green Park Extension, New Delhi</a></li>
+                        <li><i>📞</i> <a href="tel:+919717289689">+91 9717289689</a></li>
+                        <li><i>✉️</i> <a href="mailto:bipinsolanki007@gmail.com">bipinsolanki007@gmail.com</a></li>
+                        <li><i>🕒</i> Everyday 9 AM – 5 PM</li>
+                    </ul>
                 </div>
             </div>
             <div class="footer-bottom">
