Update contact and index pages to replace outdated map links for Apollo Spectra Hospitals with a new URL, improving accessibility. Adjust styles to enhance mobile responsiveness for Instagram embeds.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="top-bar">
         <div class="container">
             <div class="contact-info">
-                <span>📍 <a href="https://maps.app.goo.gl/3MmSdmw9So3xGZUG6" target="_blank" rel="noopener" class="map-link">Apollo Spectra Hospitals, Greater Kailash, New Delhi</a></span>
+                <span>📍 <a href="https://maps.app.goo.gl/gi4SNtTcK7f6exES7" target="_blank" rel="noopener" class="map-link">Apollo Spectra Hospitals, Greater Kailash, New Delhi</a></span>
                 <span>📍 <a href="https://maps.app.goo.gl/3MmSdmw9So3xGZUG6" target="_blank" rel="noopener" class="map-link">Yupiter Hospital, Green Park Extension, New Delhi</a></span>
             </div>
             <div class="contact-info center">
@@ -561,7 +561,7 @@
                     <span class="badge">Fill The Form</span>
                     <h2>Make an Appointment</h2>
                     <p><strong>BBC Best Bone Clinic — Comprehensive Orthopedic Care in South Delhi</strong></p>
-                    <p><a href="https://maps.app.goo.gl/3MmSdmw9So3xGZUG6" target="_blank" rel="noopener" class="map-link">Apollo Spectra Hospitals, Greater Kailash, New Delhi</a></p>
+                    <p><a href="https://maps.app.goo.gl/gi4SNtTcK7f6exES7" target="_blank" rel="noopener" class="map-link">Apollo Spectra Hospitals, Greater Kailash, New Delhi</a></p>
                     <p><a href="https://maps.app.goo.gl/3MmSdmw9So3xGZUG6" target="_blank" rel="noopener" class="map-link">Yupiter Hospital, Safdarjung Enclave, J-4 Green Park Ext Rd, New Delhi, 110016</a></p>
                     <div class="appt-call">
                         <span class="call-icon">📞</span>
@@ -673,7 +673,7 @@
                 <div class="footer-section">
                     <h4>Our Clinic</h4>
                     <ul>
-                        <li><i>📍</i> <a href="https://maps.app.goo.gl/3MmSdmw9So3xGZUG6" target="_blank" rel="noopener" class="map-link">Apollo Spectra Hospitals, Greater Kailash, New Delhi</a></li>
+                                                                          <li><i>📍</i> <a href="https://maps.app.goo.gl/gi4SNtTcK7f6exES7" target="_blank" rel="noopener" class="map-link">Apollo Spectra Hospitals, Greater Kailash, New Delhi</a></li>
                         <li><i>📍</i> <a href="https://maps.app.goo.gl/3MmSdmw9So3xGZUG6" target="_blank" rel="noopener" class="map-link">Yupiter Hospital, Green Park Extension, New Delhi</a></li>
                         <li><i>📞</i> <a href="tel:+919717289689">+91 9717289689</a></li>
                         <li><i>✉️</i> <a href="mailto:bipinsolanki007@gmail.com">bipinsolanki007@gmail.com</a></li>
