Update multiple pages to include new hospital locations with interactive map links, enhancing user accessibility. Replace outdated "Fracture & Trauma Care" links with "Arthritis Treatment" across various sections for improved navigation and content relevance.

--- a/arthritis-treatment.html
+++ b/arthritis-treatment.html
@@ -16,6 +16,7 @@
     <div class="top-bar">
         <div class="container">
             <div class="contact-info">
+                <span>📍 <a href="https://maps.app.goo.gl/gi4SNtTcK7f6exES7" target="_blank" rel="noopener" class="map-link">Apollo Spectra Hospitals, Greater Kailash, New Delhi</a></span>
                 <span>📍 <a href="https://maps.app.goo.gl/3MmSdmw9So3xGZUG6" target="_blank" rel="noopener" class="map-link">Yupiter Hospital, Green Park Extension, New Delhi</a></span>
             </div>
             <div class="contact-info center">
@@ -235,7 +236,7 @@
                     <ul>
                         <li><a href="spine-treatments.html">Spine Treatments</a></li>
                         <li><a href="arthroscopic-surgery.html">Arthroscopic Surgery</a></li>
-                        <li><a href="#">Fracture & Trauma Care</a></li>
+                        <li><a href="arthritis-treatment.html">Arthritis Treatment</a></li>
                         <li><a href="hip-replacement.html">Hip Replacement Surgery</a></li>
                         <li><a href="knee-replacement.html">Knee Replacement Surgery</a></li>
                     </ul>
