--- a/blog-conservative-treatment.html
+++ b/blog-conservative-treatment.html
@@ -244,7 +244,7 @@
                     <ul>
                         <li><a href="spine-treatments.html">Spine Treatments</a></li>
                         <li><a href="arthroscopic-surgery.html">Arthroscopic Surgery</a></li>
-                        <li><a href="#">Fracture & Trauma Care</a></li>
+                        <li><a href="arthritis-treatment.html">Arthritis Treatment</a></li>
                         <li><a href="hip-replacement.html">Hip Replacement Surgery</a></li>
                         <li><a href="knee-replacement.html">Knee Replacement Surgery</a></li>
                     </ul>
