Update footer links across multiple pages to direct to the correct Privacy Policy and Patient Testimonial sections. Replace outdated patient case study images with updated ones for better representation. Enhance styles for testimonials and dropdown functionality for improved user experience and mobile responsiveness.

--- a/about.html
+++ b/about.html
@@ -285,7 +285,7 @@
                 <div class="footer-section footer-brand">
                     <div class="footer-logo">
                         <a href="index.html">
-                            <img src="images/bbc-logo.png" alt="BBC Best Bone Clinic" class="footer-logo-img">
+                        <img src="images/bbc-logo.png" alt="BBC Best Bone Clinic" class="footer-logo-img">
                         </a>
                     </div>
                     <p class="footer-text">In Orthopaedics International most of our patients wind up feeling like family. You'll always see Dr. Bipin when you come in for your appointment.</p>
@@ -302,8 +302,8 @@
                         <li><a href="blogs.html">Blog</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="contact.html">Contact</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Patient Testimonial</a></li>
+                        <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                        <li><a href="patient-testimonials.html">Patient Testimonial</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
