--- a/case-study.html
+++ b/case-study.html
@@ -142,7 +142,7 @@
                 <!-- Case Study 1 -->
                 <div class="case-study-card">
                     <div class="case-study-image">
-                        <img src="images/patient-1.jpg" alt="Patient Case Study - Knee Replacement">
+                        <img src="images/knee-replacement.png" alt="Patient Case Study - Knee Replacement">
                     </div>
                     <div class="case-study-content">
                         <h3>Mrs. Rajeshwari Sharma</h3>
@@ -169,7 +169,7 @@
                 <!-- Case Study 2 -->
                 <div class="case-study-card">
                     <div class="case-study-image">
-                        <img src="images/patient-2.jpg" alt="Patient Case Study - Hip Replacement">
+                        <img src="images/hip-replacement.png" alt="Patient Case Study - Hip Replacement">
                     </div>
                     <div class="case-study-content">
                         <h3>Mr. Amit Patel</h3>
@@ -196,7 +196,7 @@
                 <!-- Case Study 3 -->
                 <div class="case-study-card">
                     <div class="case-study-image">
-                        <img src="images/patient-3.jpg" alt="Patient Case Study - Arthroscopic Surgery">
+                        <img src="images/arthroscopic-surgery.png" alt="Patient Case Study - Arthroscopic Surgery">
                     </div>
                     <div class="case-study-content">
                         <h3>Ms. Priya Verma</h3>
@@ -223,7 +223,7 @@
                 <!-- Case Study 4 -->
                 <div class="case-study-card">
                     <div class="case-study-image">
-                        <img src="images/patient-4.jpg" alt="Patient Case Study - Spine Treatment">
+                        <img src="images/spine-treatment.png" alt="Patient Case Study - Spine Treatment">
                     </div>
                     <div class="case-study-content">
                         <h3>Mr. Suresh Kumar</h3>
@@ -250,7 +250,7 @@
                 <!-- Case Study 5 -->
                 <div class="case-study-card">
                     <div class="case-study-image">
-                        <img src="images/patient-5.jpg" alt="Patient Case Study - Trauma Care">
+                        <img src="images/fracture-care.png" alt="Patient Case Study - Trauma Care">
                     </div>
                     <div class="case-study-content">
                         <h3>Mr. Ramesh Singh</h3>
@@ -277,7 +277,7 @@
                 <!-- Case Study 6 -->
                 <div class="case-study-card">
                     <div class="case-study-image">
-                        <img src="images/patient-6.jpg" alt="Patient Case Study - Arthritis Treatment">
+                        <img src="images/arthritis-care.png" alt="Patient Case Study - Arthritis Treatment">
                     </div>
                     <div class="case-study-content">
                         <h3>Mrs. Geeta Devi</h3>
@@ -368,8 +368,8 @@
                         <li><a href="blogs.html">Blog</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="contact.html">Contact</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Patient Testimonial</a></li>
+                        <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                        <li><a href="patient-testimonials.html">Patient Testimonial</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
