--- a/index.html
+++ b/index.html
@@ -363,15 +363,39 @@
             <div class="testimonials-grid">
                 <div class="testimonial-card">
                     <p>"Dr Bipin Solanki is an exceptional trauma specialist. His expertise in fracture management and conservative treatment approach helped me recover completely without surgery. Highly recommended for trauma care."</p>
-                    <div class="testimonial-author">Rajesh Kumar</div>
+                    <div class="testimonial-author">Mr. Ramesh Singh</div>
+                    <div class="testimonial-details">Trauma Surgery • Age: 38</div>
                 </div>
                 <div class="testimonial-card">
                     <p>"Dr Solanki's AIIMS experience and international training make him the best choice for complex trauma cases. His patient-first approach and conservative treatment philosophy are truly commendable."</p>
-                    <div class="testimonial-author">Priya Sharma</div>
+                    <div class="testimonial-author">Ms. Priya Verma</div>
+                    <div class="testimonial-details">Arthroscopic Knee Surgery • Age: 32</div>
                 </div>
                 <div class="testimonial-card">
                     <p>"Dr Bipin Solanki treated my sports injury with such expertise. His combination of trauma experience and orthopedic skills ensured my complete recovery and return to sports."</p>
-                    <div class="testimonial-author">Vikram Singh</div>
+                    <div class="testimonial-author">Mr. Suresh Kumar</div>
+                    <div class="testimonial-details">Spine Treatment • Age: 45</div>
+                </div>
+
+                <!-- Testimonial 4 -->
+                <div class="testimonial-card">
+                    <p>"Dr. Bipin Solanki performed my knee replacement surgery with exceptional skill. After suffering from severe arthritis for 5 years, I can now walk pain-free and enjoy my daily activities."</p>
+                    <div class="testimonial-author">Mrs. Rajeshwari Sharma</div>
+                    <div class="testimonial-details">Knee Replacement Surgery • Age: 65</div>
+                </div>
+
+                <!-- Testimonial 5 -->
+                <div class="testimonial-card">
+                    <p>"My hip replacement surgery with Dr. Bipin Solanki was life-changing. I had avascular necrosis that was severely affecting my mobility. Now I'm back to my active lifestyle."</p>
+                    <div class="testimonial-author">Mr. Amit Patel</div>
+                    <div class="testimonial-details">Hip Replacement Surgery • Age: 58</div>
+                </div>
+
+                <!-- Testimonial 6 -->
+                <div class="testimonial-card">
+                    <p>"Living with rheumatoid arthritis was extremely challenging. Dr. Bipin Solanki's comprehensive treatment plan significantly improved my mobility and reduced pain."</p>
+                    <div class="testimonial-author">Mrs. Geeta Devi</div>
+                    <div class="testimonial-details">Arthritis Treatment • Age: 70</div>
                 </div>
             </div>
         </div>
@@ -656,8 +680,8 @@
                         <li><a href="blogs.html">Blog</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="contact.html">Contact</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Patient Testimonial</a></li>
+                        <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                        <li><a href="patient-testimonials.html">Patient Testimonial</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
