--- a/blogs.html
+++ b/blogs.html
@@ -224,8 +224,8 @@
                         <li><a href="blogs.html">Blog</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="contact.html">Contact</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Patient Testimonial</a></li>
+                        <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                        <li><a href="patient-testimonials.html">Patient Testimonial</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
