--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle">Resources ▼</a>
                         <ul class="dropdown-menu">
-                            <li><a href="video.html">Video</a></li>
+                            <li><a href="videos.html">Videos</a></li>
                             <li><a href="case-study.html">Case Study</a></li>
                         </ul>
                     </li>
